Fix about/team on mobile

--- a/css/pages/_team.scss
+++ b/css/pages/_team.scss
@@ -69,7 +69,7 @@
     text-align: center;
 
     h3.name {
-      margin: 0;
+      margin: 0 0 20px 0;
     }
   }
 
